--- a/expansions/polars/modules/ty-tableframe/Cargo.toml
+++ b/expansions/polars/modules/ty-tableframe/Cargo.toml
@@ -41,7 +41,7 @@ dummy = []
 extension-module = ["pyo3/extension-module"]
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "td-build", "td-common", "td-error", "ta-tableframe", "te-tableframe", "thiserror", "toml", "serde", "arrow", "polars-arrow", "polars-mem-engine", "polars-plan", "rayon"]
+ignored = ["openssl", "td-build", "td-error", "ta-tableframe", "te-tableframe", "thiserror", "toml", "polars-arrow", "polars-mem-engine", "polars-plan", "rayon"]
 
 # Build dependencies
 
@@ -67,9 +67,11 @@ ta-tableframe = { workspace = true }
 
 arrow = { workspace = true }
 chrono = { workspace = true }
+dashmap = { workspace = true }
 data-encoding = { workspace = true }
 grok = { workspace = true }
-polars = { workspace = true, features = ["default", "fmt", "dtype-date", "timezones"] }
+indexmap = { workspace = true }
+polars = { workspace = true, features = ["default", "fmt", "dtype-date", "dtype-struct", "timezones"] }
 polars-plan = { workspace = true, features = ["python"] }
 polars-mem-engine = { workspace = true, features = ["python"] }
 pyo3 = { workspace = true, features = ["abi3-py312", "anyhow", "macros", "multiple-pymethods", "num-bigint", "num-complex", "num-rational", "rust_decimal", "serde", "smallvec"] }
@@ -77,7 +79,10 @@ pyo3-polars = { workspace = true, features = ["derive"] }
 pyo3-stub-gen = { workspace = true }
 rayon = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
+tracing = { workspace = true }
+uuid = { workspace = true, features = ["v4"] }
 uuid7 = { workspace = true }
+once_cell = "1.21.3"
 
 
 [target.'cfg(target_os = "linux")'.dependencies]
