--- a/Cross.toml
+++ b/Cross.toml
@@ -23,6 +23,45 @@ pre-build = [
 [target.x86_64-unknown-linux-musl.env]
 passthrough = [
     "TD_CROSS_BUILD=true",
+    # >>> passthrough:MAKE:BEGIN >>>
+    "TD_ON_GA",
+    "CARGO_TERM_COLOR",
+    "RUST_BACKTRACE",
+    "RUST_LOG",
+    "RUSTDOC_LOG",
+    "RUST_TEST_THREADS",
+    "TD_CLI_SHOW",
+    "TD_SHOW_ENV",
+    "LOG_CRATE_TM_WORKSPACE",
+    "TD_DISABLE_OPENAPI_DOCS_ENDPOINT",
+    "REQUIRE_SERVER_BINARIES",
+    "REQUIRE_THIRD_PARTY",
+    "REQUIRE_PYDOC_CSV",
+    "TD_IGNORE_CONNECTOR_REQUIREMENTS",
+    "TD_SKIP_NON_EXISTING_ASSETS",
+    "PYTHON_IGNORE_UNAVAILABLE_PUBLIC_PACKAGES",
+    # <<< passthrough:MAKE:END <<<
+    # >>> passthrough:PLATFORM:BEGIN >>>
+    "TDX_OS",
+    "TDX_ARCHITECTURE",
+    "TDX_PLATFORM",
+    "RUST_CHANNEL",
+    "RUST_TARGET",
+    "RUST_TOOLCHAIN",
+    "TD_CHANNEL",
+    "TD_TARGET",
+    "TD_TOOLCHAIN",
+    "TD_CROSS",
+    "RUST_PROFILE",
+    "PYTHON_VERSION",
+    "NODE_VERSION",
+    "MARKERS",
+    "PYTEST_MAXIMUM_RETRY_COUNT",
+    "PYTHONIOENCODING",
+    "NODE_VERSION",
+    "TD_UI_MODE",
+    "TABSDATA_VERSION",
+    # <<< passthrough:PLATFORM:END <<<
     # >>> passthrough:SECRETS:BEGIN >>>
     "S30__S3_ACCESS_KEY",
     "S30__S3_SECRET_KEY",
