--- a/macros/Cross.toml
+++ b/macros/Cross.toml
@@ -23,4 +23,92 @@ pre-build = [
 [target.x86_64-unknown-linux-musl.env]
 passthrough = [
     "TD_CROSS_BUILD=true",
+    # >>> passthrough:MAKE:BEGIN >>>
+    "TD_ON_GA",
+    "CARGO_TERM_COLOR",
+    "RUST_BACKTRACE",
+    "RUST_LOG",
+    "RUSTDOC_LOG",
+    "RUST_TEST_THREADS",
+    "TD_CLI_SHOW",
+    "TD_SHOW_ENV",
+    "LOG_CRATE_TM_WORKSPACE",
+    "TD_DISABLE_OPENAPI_DOCS_ENDPOINT",
+    "REQUIRE_SERVER_BINARIES",
+    "REQUIRE_THIRD_PARTY",
+    "REQUIRE_PYDOC_CSV",
+    "TD_IGNORE_CONNECTOR_REQUIREMENTS",
+    "TD_SKIP_NON_EXISTING_ASSETS",
+    "PYTHON_IGNORE_UNAVAILABLE_PUBLIC_PACKAGES",
+    # <<< passthrough:MAKE:END <<<
+    # >>> passthrough:PLATFORM:BEGIN >>>
+    "TDX_OS",
+    "TDX_ARCHITECTURE",
+    "TDX_PLATFORM",
+    "RUST_CHANNEL",
+    "RUST_TARGET",
+    "RUST_TOOLCHAIN",
+    "TD_CHANNEL",
+    "TD_TARGET",
+    "TD_TOOLCHAIN",
+    "TD_CROSS",
+    "RUST_PROFILE",
+    "PYTHON_VERSION",
+    "NODE_VERSION",
+    "MARKERS",
+    "PYTEST_MAXIMUM_RETRY_COUNT",
+    "PYTHONIOENCODING",
+    "NODE_VERSION",
+    "TD_UI_MODE",
+    "TABSDATA_VERSION",
+    # <<< passthrough:PLATFORM:END <<<
+    # >>> passthrough:SECRETS:BEGIN >>>
+    "S30__S3_ACCESS_KEY",
+    "S30__S3_SECRET_KEY",
+    "S30__S3_REGION",
+    "S30__S3_URI",
+    "COPY_AWS_AWS_ACCESS_KEY_ID",
+    "COPY_AWS_AWS_REGION",
+    "COPY_AWS_AWS_SECRET_ACCESS_KEY",
+    "COPY_AWS_BASE_URL",
+    "IMPORT_AWS_ACCESS_KEY",
+    "IMPORT_AWS_REGION",
+    "IMPORT_AWS_SECRET_KEY",
+    "IMPORT_AWS_BASE_URL",
+    "TRANSPORTER_AWS_ACCESS_KEY_ID",
+    "TRANSPORTER_AWS_REGION",
+    "TRANSPORTER_AWS_SECRET_ACCESS_KEY",
+    "TRANSPORTER_AWS_URI",
+    "AZ0__AZ_ACCOUNT_KEY",
+    "AZ0__AZ_ACCOUNT_NAME",
+    "AZ0__AZ_URI",
+    "COPY_AZURE_ACCOUNT_KEY",
+    "COPY_AZURE_ACCOUNT_NAME",
+    "COPY_AZURE_BASE_URL",
+    "IMPORT_AZURE_ACCOUNT_KEY",
+    "IMPORT_AZURE_ACCOUNT_NAME",
+    "IMPORT_AZURE_BASE_URL",
+    "TRANSPORTER_AZURE_ACCOUNT_KEY",
+    "TRANSPORTER_AZURE_ACCOUNT_NAME",
+    "GCP0__GCP_SERVICE_ACCOUNT_KEY",
+    "GCP0__GCP_STORAGE_URI",
+    "TD_DATABRICKS_CATALOG",
+    "TD_DATABRICKS_HOST",
+    "TD_DATABRICKS_SCHEMA",
+    "TD_DATABRICKS_TOKEN",
+    "TD_DATABRICKS_VOLUME",
+    "TD_DATABRICKS_WAREHOUSE_NAME",
+    "TD_DATABRICKS_WAREHOUSE_ID",
+    "SALESFORCE_INSTANCE_URL",
+    "SALESFORCE_PASSWORD",
+    "SALESFORCE_SECURITY_TOKEN",
+    "SALESFORCE_USERNAME",
+    "TD_SNOWFLAKE_ACCOUNT",
+    "TD_SNOWFLAKE_DATABASE",
+    "TD_SNOWFLAKE_PAT",
+    "TD_SNOWFLAKE_ROLE",
+    "TD_SNOWFLAKE_SCHEMA",
+    "TD_SNOWFLAKE_USER",
+    "TD_SNOWFLAKE_WAREHOUSE",
+    # <<< passthrough:SECRETS:END <<<
 ]
