--- a/requirements/requirements-dev-third-party.txt
+++ b/requirements/requirements-dev-third-party.txt
@@ -34,6 +34,7 @@ mimesis==18.0.0
 parquet-tools==0.2.16
 pdoc==15.0.4
 pipdeptree==2.28.0
+pip-audit==2.9.0
 pip-tools==7.5.0
 pip-upgrader==1.4.15
 psutil==7.0.0
