[TD-837] Update Rust & Python dependencies (#730)

--- a/server/libraries/td-shuttle/Cargo.toml
+++ b/server/libraries/td-shuttle/Cargo.toml
@@ -77,7 +77,7 @@ getset = { workspace = true }
 itertools = { workspace = true }
 object_store = { workspace = true, features = ["aws", "azure", "gcp", "http"] }
 polars = { workspace = true, features = ["lazy", "polars-lazy", "async", "csv", "json", "parquet", "cloud", "aws", "azure", "gcp", "sql"] }
-polars-io = { version = "0.50.0", features = ["cloud"]  }
+polars-io = { workspace = true, features = ["cloud"]  }
 polars-parquet-format = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
