[TD-817] Refactor testing for better handling of the needed credentials and information (#723)

--- a/Cross.toml
+++ b/Cross.toml
@@ -92,23 +92,22 @@ passthrough = [
     "TRANSPORTER_AZURE_ACCOUNT_NAME",
     "GCP0__GCP_SERVICE_ACCOUNT_KEY",
     "GCP0__GCP_STORAGE_URI",
-    "TD_DATABRICKS_CATALOG",
-    "TD_DATABRICKS_HOST",
-    "TD_DATABRICKS_SCHEMA",
-    "TD_DATABRICKS_TOKEN",
-    "TD_DATABRICKS_VOLUME",
-    "TD_DATABRICKS_WAREHOUSE_NAME",
-    "TD_DATABRICKS_WAREHOUSE_ID",
-    "SALESFORCE_INSTANCE_URL",
-    "SALESFORCE_PASSWORD",
-    "SALESFORCE_SECURITY_TOKEN",
-    "SALESFORCE_USERNAME",
-    "TD_SNOWFLAKE_ACCOUNT",
-    "TD_SNOWFLAKE_DATABASE",
-    "TD_SNOWFLAKE_PAT",
-    "TD_SNOWFLAKE_ROLE",
-    "TD_SNOWFLAKE_SCHEMA",
-    "TD_SNOWFLAKE_USER",
-    "TD_SNOWFLAKE_WAREHOUSE",
+    "DBX0__CATALOG",
+    "DBX0__HOST",
+    "DBX0__SCHEMA",
+    "DBX0__TOKEN",
+    "DBX0__VOLUME",
+    "DBX0__WAREHOUSE_NAME",
+    "SF0__INSTANCE_URL",
+    "SF0__PASSWORD",
+    "SF0__SECURITY_TOKEN",
+    "SF0__USERNAME",
+    "SNW__ACCOUNT",
+    "SNW__DATABASE",
+    "SNW__PAT",
+    "SNW__ROLE",
+    "SNW__SCHEMA",
+    "SNW__USER",
+    "SNW__WAREHOUSE",
     # <<< passthrough:SECRETS:END <<<
 ]
