--- a/macros/Cross.toml
+++ b/macros/Cross.toml
@@ -99,16 +99,16 @@ passthrough = [
     "TD_DATABRICKS_VOLUME",
     "TD_DATABRICKS_WAREHOUSE_NAME",
     "TD_DATABRICKS_WAREHOUSE_ID",
-    "SALESFORCE_INSTANCE_URL",
-    "SALESFORCE_PASSWORD",
-    "SALESFORCE_SECURITY_TOKEN",
-    "SALESFORCE_USERNAME",
-    "TD_SNOWFLAKE_ACCOUNT",
-    "TD_SNOWFLAKE_DATABASE",
-    "TD_SNOWFLAKE_PAT",
-    "TD_SNOWFLAKE_ROLE",
-    "TD_SNOWFLAKE_SCHEMA",
-    "TD_SNOWFLAKE_USER",
-    "TD_SNOWFLAKE_WAREHOUSE",
+    "SF0__INSTANCE_URL",
+    "SF0__PASSWORD",
+    "SF0__SECURITY_TOKEN",
+    "SF0__USERNAME",
+    "SNW__ACCOUNT",
+    "SNW__DATABASE",
+    "SNW__PAT",
+    "SNW__ROLE",
+    "SNW__SCHEMA",
+    "SNW__USER",
+    "SNW__WAREHOUSE",
     # <<< passthrough:SECRETS:END <<<
 ]
