--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -255,24 +255,23 @@ jobs:
       TRANSPORTER_AZURE_ACCOUNT_NAME: ${{ secrets.TRANSPORTER_AZURE_ACCOUNT_NAME }}
       GCP0__GCP_SERVICE_ACCOUNT_KEY: ${{ secrets.GCP0__GCP_SERVICE_ACCOUNT_KEY }}
       GCP0__GCP_STORAGE_URI: ${{ secrets.GCP0__GCP_STORAGE_URI }}
-      TD_DATABRICKS_CATALOG: ${{ secrets.TD_DATABRICKS_CATALOG }}
-      TD_DATABRICKS_HOST: ${{ secrets.TD_DATABRICKS_HOST }}
-      TD_DATABRICKS_SCHEMA: ${{ secrets.TD_DATABRICKS_SCHEMA }}
-      TD_DATABRICKS_TOKEN: ${{ secrets.TD_DATABRICKS_TOKEN }}
-      TD_DATABRICKS_VOLUME: ${{ secrets.TD_DATABRICKS_VOLUME }}
-      TD_DATABRICKS_WAREHOUSE_NAME: ${{ secrets.TD_DATABRICKS_WAREHOUSE_NAME }}
-      TD_DATABRICKS_WAREHOUSE_ID: ${{ secrets.TD_DATABRICKS_WAREHOUSE_ID }}
-      SALESFORCE_INSTANCE_URL: ${{ secrets.SALESFORCE_INSTANCE_URL }}
-      SALESFORCE_PASSWORD: ${{ secrets.SALESFORCE_PASSWORD }}
-      SALESFORCE_SECURITY_TOKEN: ${{ secrets.SALESFORCE_SECURITY_TOKEN }}
-      SALESFORCE_USERNAME: ${{ secrets.SALESFORCE_USERNAME }}
-      TD_SNOWFLAKE_ACCOUNT: ${{ secrets.TD_SNOWFLAKE_ACCOUNT }}
-      TD_SNOWFLAKE_DATABASE: ${{ secrets.TD_SNOWFLAKE_DATABASE }}
-      TD_SNOWFLAKE_PAT: ${{ secrets.TD_SNOWFLAKE_PAT }}
-      TD_SNOWFLAKE_ROLE: ${{ secrets.TD_SNOWFLAKE_ROLE }}
-      TD_SNOWFLAKE_SCHEMA: ${{ secrets.TD_SNOWFLAKE_SCHEMA }}
-      TD_SNOWFLAKE_USER: ${{ secrets.TD_SNOWFLAKE_USER }}
-      TD_SNOWFLAKE_WAREHOUSE: ${{ secrets.TD_SNOWFLAKE_WAREHOUSE }}
+      DBX0__CATALOG: ${{ secrets.DBX0__CATALOG }}
+      DBX0__HOST: ${{ secrets.DBX0__HOST }}
+      DBX0__SCHEMA: ${{ secrets.DBX0__SCHEMA }}
+      DBX0__TOKEN: ${{ secrets.DBX0__TOKEN }}
+      DBX0__VOLUME: ${{ secrets.DBX0__VOLUME }}
+      DBX0__WAREHOUSE_NAME: ${{ secrets.DBX0__WAREHOUSE_NAME }}
+      SF0__INSTANCE_URL: ${{ secrets.SF0__INSTANCE_URL }}
+      SF0__PASSWORD: ${{ secrets.SF0__PASSWORD }}
+      SF0__SECURITY_TOKEN: ${{ secrets.SF0__SECURITY_TOKEN }}
+      SF0__USERNAME: ${{ secrets.SF0__USERNAME }}
+      SNW__ACCOUNT: ${{ secrets.SNW__ACCOUNT }}
+      SNW__DATABASE: ${{ secrets.SNW__DATABASE }}
+      SNW__PAT: ${{ secrets.SNW__PAT }}
+      SNW__ROLE: ${{ secrets.SNW__ROLE }}
+      SNW__SCHEMA: ${{ secrets.SNW__SCHEMA }}
+      SNW__USER: ${{ secrets.SNW__USER }}
+      SNW__WAREHOUSE: ${{ secrets.SNW__WAREHOUSE }}
     with:
       job_timeout: ${{ fromJson(needs.cap-job.outputs.job_timeout) }}
       dump_server: ${{ inputs.dump_server }}
