[TD-844] Initial structure of agent as a Python project (#737)

--- a/expansions/polars/modules/ty-tableframe/pyproject.toml
+++ b/expansions/polars/modules/ty-tableframe/pyproject.toml
@@ -45,6 +45,7 @@ profile = "black"
 skip_glob = ["*.pyi"]
 known_first_party = [
     "tabsdata",
+    "tabsdata_agent",
     "tabsdata_databricks",
     "tabsdata_mongodb",
     "tabsdata_mssql",
