[TD-850] Fixes and modifications to support new cargo make and agent on github actions workflows (#747)

--- a/.github/events/release.json
+++ b/.github/events/release.json
@@ -1,6 +1,6 @@
 {
   "inputs": {
-    "td_product": "standard",
+    "td_product": "open source",
     "runner_mode": "release",
     "runner_action": "build",
     "dump_server": "false",
