--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -2,7 +2,7 @@
 # Copyright 2025 Tabs Data Inc.
 #
 
-name: Integration Workflow (Standard)
+name: Integration Workflow (Open Source)
 
 concurrency:
   group: >-
@@ -17,7 +17,7 @@ defaults:
     working-directory: .
 
 run-name: >
-  ${{ github.event_name == 'workflow_dispatch' && format('Integration Workflow (Standard) - ({0})', inputs.runner_action) || github.event_name == 'schedule' && 'Integration Workflow (Standard) - (Weekly)' || '' }}
+  ${{ github.event_name == 'workflow_dispatch' && format('Integration Workflow (Open Source) - ({0})', inputs.runner_action) || github.event_name == 'schedule' && 'Integration Workflow (Open Source) - (Weekly)' || '' }}
 
 on:
   pull_request:
@@ -275,7 +275,7 @@ jobs:
     with:
       job_timeout: ${{ fromJson(needs.cap-job.outputs.job_timeout) }}
       dump_server: ${{ inputs.dump_server }}
-      td_product: "standard"
+      td_product: "open source"
       runner_mode: "integration"
       runner_action: ${{ inputs.runner_action || 'build' }}
       run_on_linux_x86_64: ${{ needs.describe-job.outputs.run_on_linux_x86_64 }}
