--- a/server/libraries/td-error/Cargo.toml
+++ b/server/libraries/td-error/Cargo.toml
@@ -54,6 +54,7 @@ tm-error = { workspace = true }
 # External dependencies
 
 anyhow = { workspace = true }
+derive_builder = { workspace = true }
 itertools = { workspace = true }
 strum = { workspace = true, features = ["derive"] }
 thiserror = { workspace = true }
