--- a/server/libraries/td-execution/Cargo.toml
+++ b/server/libraries/td-execution/Cargo.toml
@@ -56,6 +56,7 @@ td-test = { workspace = true }
 # External dependencies
 
 async-trait = { workspace = true }
+derive_builder = { workspace = true }
 futures = { workspace = true }
 itertools = { workspace = true }
 petgraph = { workspace = true }
